Fix bug 12349, IE7 was setting overflow to hidden in #detailView, I couldn't figure out why but making the default explicit fixes the problem.
git-svn-id: http://svn.osafoundation.org/server/cosmo/branches/1.0@7314 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/cosmo-js/src/cosmo/themes/default/DetailView.css
+++ b/cosmo-js/src/cosmo/themes/default/DetailView.css
@@ -3,6 +3,7 @@
 
 #detailView{
     overflow-x: hidden;
+    overflow-y: auto;
 }
 .cosmoDetailView {
     position: absolute;
